# gcop-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_ZH.md
.github/workflows/: ci.yml  release.yml
docs/: .gitignore  commands.md  configuration.md  index.md  installation.md  package.json  prompts.md  providers.md  troubleshooting.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
docs/guide/: aliases.md  configuration.md  installation.md  prompts.md  troubleshooting.md
docs/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.4.md  v0.1.6.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md
docs/zh/: commands.md  configuration.md  index.md  installation.md  prompts.md  providers.md  troubleshooting.md
docs/zh/guide/: aliases.md  commands.md  configuration.md  installation.md  providers.md  troubleshooting.md
docs/zh/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.2.0.md  v0.2.1.md  v0.3.1.md  v0.4.0.md  v0.4.2.md
examples/: config.toml.example  config.toml.example.zh  test_git_ops.rs
homebrew/: gcop-rs.rb
src/: cli.rs  constants.rs  error.rs  lib.rs  main.rs
src/commands/: alias.rs  commit.rs  commit_state_machine.rs  config.rs  init.rs  mod.rs  review.rs  stats.rs
src/config/: mod.rs  schema.rs
src/git/: mod.rs  repository.rs
src/llm/: message.rs  mod.rs  prompt.rs
src/llm/provider/: base.rs  claude.rs  mod.rs  ollama.rs  openai.rs  utils.rs
src/ui/: mod.rs  prompt.rs  spinner.rs
tests/: commit_integration_test.rs
