[package]
name = "gcop-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AI-powered Git commit message generator and code reviewer"
authors = ["AptS-1547 <apts-1547@esaps.net>"]
repository = "https://github.com/AptS-1547/gcop-rs"
homepage = "https://github.com/AptS-1547/gcop-rs"
keywords = ["git", "commit", "ai", "code-review", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = false

[profile.release-debug]
inherits = "release"
codegen-units = 1
debug = true
strip = false
lto = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "2.1"
config = "0.14"
dialoguer = { version = "0.11", features = ["editor"] }
directories = "5.0"
edit = "0.1"
git2 = "0.19"
indicatif = "0.18.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lib]
name = "gcop_rs"
path = "src/lib.rs"

[[example]]
name = "test_git_ops"
path = "examples/test_git_ops.rs"
